crates/ty_python_semantic/resources/mdtest/snapshots/invalid_await.md_-_Invalid_await_diagno…_-_Non-callable_`__awai…_(d78580fb6720e4ea).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_await.md - Invalid await diagnostics - Non-callable `__await__`
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_await.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class NonCallableAwait:
 2 |     __await__ = 42
 3 | 
 4 | async def main() -> None:
 5 |     await NonCallableAwait()  # error: [invalid-await]
 6 | class BaseWithBadAwait:
 7 |     __await__ = 42
 8 | 
 9 | class IntermediateAwait(BaseWithBadAwait): ...
10 | class DeepInheritedNonCallableAwait(IntermediateAwait): ...
11 | 
12 | async def main() -> None:
13 |     await DeepInheritedNonCallableAwait()  # error: [invalid-await]
```

# Diagnostics

```
error[invalid-await]: `NonCallableAwait` is not awaitable
 --> src/mdtest_snippet.py:5:11
  |
5 |     await NonCallableAwait()  # error: [invalid-await]
  |           ^^^^^^^^^^^^^^^^^^
  |
 ::: src/mdtest_snippet.py:2:5
  |
2 |     __await__ = 42
  |     --------- attribute defined here
  |
info: `__await__` is not callable

```

```
error[invalid-await]: `DeepInheritedNonCallableAwait` is not awaitable
  --> src/mdtest_snippet.py:13:11
   |
13 |     await DeepInheritedNonCallableAwait()  # error: [invalid-await]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: src/mdtest_snippet.py:7:5
   |
 7 |     __await__ = 42
   |     --------- attribute defined here
   |
info: `__await__` is not callable

```
